--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ DerivedData
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 #Pods/
+.idea/.name
+.idea/CopyClever.iml
+.idea/encodings.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/xcode.xml
+.idea/scopes/scope_settings.xml
+misc.xml
