--- a/CopyClever.xcodeproj/xcshareddata/xcschemes/CopyClever.xcscheme
+++ b/CopyClever.xcodeproj/xcshareddata/xcschemes/CopyClever.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A4B818F31A49924700D45428"
-               BuildableName = "CopyCleverHelper.app"
-               BlueprintName = "CopyCleverHelper"
-               ReferencedContainer = "container:CopyCleverHelper.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A4B819061A49924700D45428"
-               BuildableName = "CopyCleverHelperTests.xctest"
-               BlueprintName = "CopyCleverHelperTests"
-               ReferencedContainer = "container:CopyCleverHelper.xcodeproj">
+               BlueprintIdentifier = "A4A1C48419B68D8E004394B9"
+               BuildableName = "CopyClever.app"
+               BlueprintName = "CopyClever"
+               ReferencedContainer = "container:CopyClever.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -42,24 +28,14 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A4B819061A49924700D45428"
-               BuildableName = "CopyCleverHelperTests.xctest"
-               BlueprintName = "CopyCleverHelperTests"
-               ReferencedContainer = "container:CopyCleverHelper.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A4B818F31A49924700D45428"
-            BuildableName = "CopyCleverHelper.app"
-            BlueprintName = "CopyCleverHelper"
-            ReferencedContainer = "container:CopyCleverHelper.xcodeproj">
+            BlueprintIdentifier = "A4A1C48419B68D8E004394B9"
+            BuildableName = "CopyClever.app"
+            BlueprintName = "CopyClever"
+            ReferencedContainer = "container:CopyClever.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -72,13 +48,14 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A4B818F31A49924700D45428"
-            BuildableName = "CopyCleverHelper.app"
-            BlueprintName = "CopyCleverHelper"
-            ReferencedContainer = "container:CopyCleverHelper.xcodeproj">
+            BlueprintIdentifier = "A4A1C48419B68D8E004394B9"
+            BuildableName = "CopyClever.app"
+            BlueprintName = "CopyClever"
+            ReferencedContainer = "container:CopyClever.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -90,13 +67,14 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A4B818F31A49924700D45428"
-            BuildableName = "CopyCleverHelper.app"
-            BlueprintName = "CopyCleverHelper"
-            ReferencedContainer = "container:CopyCleverHelper.xcodeproj">
+            BlueprintIdentifier = "A4A1C48419B68D8E004394B9"
+            BuildableName = "CopyClever.app"
+            BlueprintName = "CopyClever"
+            ReferencedContainer = "container:CopyClever.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
