--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ osx_image: xcode12.2
 language: objective-c
 xcode_project: CopyClever.xcodeproj
 xcode_scheme: CopyClever
+script:
+- set -o pipefail
+- xcodebuild -project CopyClever.xcodeproj -scheme CopyClever build | xcpretty
